wordpress.org/public_html/wp-content/themes/pub/wporg-breathe-2024/style.css
/* ... */
.o2-app-page-title a {
	color: #0072a9;
}
.o2-app-page-title a:visited {
	color: #4ca6cf;
}

.home .o2-app-page-title {
	display: none;
}

.o2-app-controls {
	font-size: 0.9em;
}

.o2-app-new-post {
	margin-bottom: 2em;
}

@media screen and (max-width: 640px) {
	.make-polyglots .o2-app-new-post {
		display: block;
	}
}

article.post .o2-post,
article#post-new .o2-post,
article.page .o2-post {
	padding: var(--wp--preset--spacing--50) var(--wp--preset--spacing--20) var(--wp--preset--spacing--20);
}

@media screen and (max-width: 640px) {
	article.post .o2-post,
	article#post-new .o2-post,
	article.page .o2-post {
		padding-left: unset;
		padding-right: unset;
	}
}

.o2-post {
	border-top: 1px solid var(--wp--custom--color--border);
	margin-top: 40px;
}

.o2-post .o2-post {
	border-top-width: 1px;
}

.page .o2-post {
	padding: 0 !important;
}

.page .o2-post .entry-content {
	padding: 0;
}

.o2-post #searchform {
	margin-bottom: 1.5em;
}

.o2-post #searchform:last-child {
	margin-bottom: 5em;
}

.o2-post #searchform #searchsubmit {
	height: 33.5px;
	padding-bottom: .6em;
}

.single-post article.post .o2-post {
	padding-top: 0;
	margin-top: 0;
	border-top: none;
}

.o2-post-comments .o2-comment .comment-content {
	margin-left: 45px;
}

pre, code {
	font-size: 0.9em;
}

pre code {
	padding: 0;
}

.wp-block-code {
	display: block;
	font-size: 13px;
	line-height: 1.75em;
	padding: 1em;
	overflow: auto;
	white-space: pre-wrap;
}

article.post .o2-post,
article#post-new .o2-post,
article.page .o2-post,
.entry-date {
	display: block;
}

article.page .o2-post {
	border-top: none;
}

article.page .entry-header .entry-meta .o2-post-actions {
	position: absolute;
	right: 0;
	top: -70px;
}

.o2-xpost-author .entry-date,
.o2-xpost-entry-date {
	display:inline-block;
}

.entry-header,
article.post .entry-header,
article#post-new .entry-header,
article.page .entry-header,
.entry-title,
article.post .entry-title,
article#post-new .entry-title,
article.page .entry-title,
.entry-content,
article footer.entry-meta {
	display: block;
	margin-left: 0;
	padding-left: 0;
	clear: both;
}

.entry-title,
article.post .entry-title,
article#post-new .entry-title,
article.page .entry-title,
.entry-content,
.post-content {
	display: block;
	clear: both;
}

.o2-xpost-content {
	display: inline-block;
	padding-top: 0.5em;
}

.tag-p2-xpost .o2-post {
	font-size: 100%;
	font-style: normal;
}

.o2-xpost-author .entry-author {
	font-weight: bold;
}

article.tag-p2-xpost {
	margin-bottom: 0;
}

.author-avatar,
article.post a.author-avatar,
article#post-new a.author-avatar,
article.page a.author-avatar {
	border: 0;
	box-shadow: none;
}

.rtl article.post .entry-header .author-avatar,
.rtl article#post-new .entry-header .author-avatar,
.rtl article.page .entry-header .author-avatar {
	float: right;
	margin-left: 10px;
	margin-right: 0;
}

.author-avatar .avatar,
.o2-comment .avatar,
.tag-p2-xpost .avatar {
	border-radius: 50%;
}

article.post a.author-avatar img.avatar,
article#post-new a.author-avatar img.avatar,
article.page a.author-avatar img.avatar {
	height: 50px !important;
	width: 50px !important;
}

/* Don't show the on-hover gravatar previews */
body > .author-avatar,
body > #grav-throbber,
body > a.grav-tilt-parent {
	display: none;
}

.entry-author-meta {
	font-size: 0.8em;
	font-weight: 300;
	line-height: 1.2;
	color: #888;
	margin: .3em 0 0 0;
}

.entry-author-meta .wporg-username {
	font-weight: 400;
}

/*
 * Resolved/unresolved
 */
article.state-resolved,
article.state-unresolved {
	border-top: 0;
}

/*
 * Sticky post
 */
.post.sticky .o2-post {
	border: 0;
	border-top: none;
	background: var(--wp--preset--color--blueberry-4);
	padding-top: 40px !important;
	margin-top: 40px;
	position: relative;
}

.sticky .o2-post:after {
	content: "\f109";
	font-family: dashicons;
	position: absolute;
	top: 45px;
	right: 60px;
	font-size: var(--wp--preset--font-size--small);
	padding: 4px;
	background: var(--wp--preset--color--blueberry-1);
	border-radius: 2px;
	line-height: 14px;
	color: var(--wp--preset--color--white);
}

.rtl .sticky .o2-post:after {
	left: 45px;
	right: initial;
}

nav.o2-post-actions ul li:last-child {
	line-height: 1;
}

/*
 * Private post status
 */
article.status-private,
article.status-private .comment.alt {
	background: #fef0f0;
}

.post.status-private .o2-post {
	padding-top: 3em;
	position: relative;
}

.status-private .o2-post:after {
	content: "\f530";
	font-family: dashicons;
	position: absolute;
	top: -2px;
	right: 45px;
	color: #fff;
	font-size: 18px;
	padding: 13px 5px 0px;
	background: #dc3232;
}

article.status-private nav.o2-dropdown-actions button.o2-dropdown-actions-disclosure.genericon,
article.status-private nav.o2-dropdown-actions button.o2-dropdown-actions-disclosure.genericon:hover,
article.status-private nav.o2-dropdown-actions button.o2-dropdown-actions-disclosure.genericon.open,
article.status-private nav.o2-dropdown-actions button.o2-dropdown-actions-disclosure.genericons.open:hover {
	color: #dc3232;
	background: #fef0f0;
}

article.type-handbook.status-private {
	box-shadow: 0 0 0 10px #fef0f0;
}

article.type-handbook.status-private .o2-post:after {
	top: -10px;
}

.widget {
	margin: 0 0 var(--wp--preset--spacing--40);
	padding: unset;
}

/* Hide image upload button. No image uploads on make blogs. */
.o2-editor-toolbar-button.genericon-picture {
	display: none;
}

.o2-post-form-options {
	margin-top: .8em; /* Same as .o2-editor .o2-editor-footer > a */
}
/* ... */

